--- a/manifest.json
+++ b/manifest.json
@@ -3,33 +3,27 @@
     "background": {
         "persistent": true,
         "scripts": [
-
-            "js/engine/migrate.js",
-
-            "js/engine/core.js",
-
-            "js/engine/api/support.js",
-            "js/engine/api/methods.js",
-            "js/engine/api/port/bg.js",
-
-            "js/background/init.js"
+            "engine/migrate.js",
+            "engine/core.js",
+            "engine/api/support.js",
+            "engine/api/methods.js",
+            "engine/api/port.bg.js",
+            "system/background.js"
         ]
     },
     "content_scripts": [ {
         "css": [
-            "css/font/gvik.css",
-            "css/common.css"
+            "font/gvik.css",
+            "system/contentStyle.css"
         ],
         "js": [
-            "js/engine/migrate.js",
-            "js/engine/core.js",
-
-
-            "js/engine/dom.js",
-            "js/engine/api/support.js",
-            "js/engine/api/methods.js",
-            "js/engine/api/port/content.js",
-            "js/content/init.js"
+            "engine/migrate.js",
+            "engine/core.js",
+            "engine/dom.js",
+            "engine/api/support.js",
+            "engine/api/methods.js",
+            "system/contentScript.js",
+            "engine/api/port.content.js"
         ],
         "matches": [
             "*://vk.com/*"
@@ -40,16 +34,16 @@
     "default_locale": "ru",
     "description": "__MSG_extDescription__",
     "icons": {
-        "128": "img/icons/icon128.png",
-        "16": "img/icons/icon16.png",
-        "48": "img/icons/icon48.png"
+        "128": "icon128.png",
+        "16": "icon16.png",
+        "48": "icon48.png"
     },
     "manifest_version": 2,
     "name": "GViK",
-    "options_page": "options/index.html",
+    "options_page": "newoptions/index.html",
     "page_action": {
         "default_icon": "img/Settings.png",
-        "default_popup": "options/index.html",
+        "default_popup": "newoptions/index.html",
         "default_title": "__MSG_actTitle__"
     },
     "permissions": [
@@ -63,46 +57,44 @@
     ],
     "version": "1.0.7.2",
     "web_accessible_resources": [
-        "js/includes/preloader.js",
-        "js/includes/loader.js",
+        "js/init.js",
 
-        "js/engine/core.js",
-        "js/engine/dom.js",
-        "js/engine/events.js",
-        "js/engine/storage.js",
-        "js/engine/configs.js",
+        "engine/core.js",
+        "engine/dom.js",
+        "engine/events.js",
+        "engine/storage.js",
+        "engine/configs.js",
 
 
-        "js/engine/api/chrome.js",
+        "engine/api/chrome.js",
 
+        "js/lib/mousetrap.js",
         "js/lib/md5.js",
 
-        "js/includes/vkinit.js",
+        "js/vkinit.js",
 
 
-        "js/includes/plugin/lastfm/api.js",
-        "js/includes/plugin/lastfm/scrobbler.js",
+        "js/plugin/lastfm/api.js",
+        "js/plugin/lastfm/scrobbler.js",
 
-        "js/includes/plugin/vkapi/vkapi.js",
-        "js/includes/plugin/vkapi/search.js",
+        "js/plugin/vkapi/vkapi.js",
+        "js/plugin/vkapi/search.js",
 
-        "js/includes/plugin/audio/download.js",
-        "js/includes/plugin/audio/bitrate.js",
-        "js/includes/plugin/audio/contextMenu.js",
-        "js/includes/plugin/audio/searchAndPlay.js",
+        "js/plugin/launcher/launcher.js",
+        "js/plugin/launcher/commands.js",
+        "js/plugin/launcher/audio.js",
 
-        "js/includes/plugin/video/download.js",
+        "js/plugin/sidebar/sidebar.js",
+        "js/plugin/sidebar/friends.js",
+        "js/plugin/sidebar/lastfm.js",
 
-        "js/includes/plugin/sidebar/sidebar.js",
-        "js/includes/plugin/sidebar/friends.js",
-        "js/includes/plugin/sidebar/lastfm.js",
+        "js/plugin/audio/download.js",
+        "js/plugin/audio/bitrate.js",
 
-        "js/includes/common.js",
+        "js/common.js",
 
         "manifest.json",
         "configs.json",
-
-        "options/index.html",
 
         "img/darr.gif",
         "img/loader.gif",
