Переделана структура проекта

--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
             "js/engine/api/methods.js",
             "js/engine/api/port/bg.js",
 
-            "js/background/init.js" 
+            "js/background/init.js"
         ]
     },
     "content_scripts": [ {
@@ -35,11 +35,11 @@
             "js/engine/api/methods.js",
             "js/engine/api/port/content.js",
 
-            "js/content/init.js"         ],
+            "js/content/init.js"
+        ],
         "matches": [
             "*://vk.com/*"
-        ],
-        "run_at": "document_start"
+        ]
     } ],
     "content_security_policy": "script-src 'self' https://www.google-analytics.com https://cdnjs.cloudflare.com  https://ssl.google-analytics.com 'unsafe-eval';  img-src *; object-src 'self'",
     "default_locale": "ru",
@@ -72,92 +72,102 @@
 
     "commands": {
 
-          "play-pause-track": {
+        "play-pause-track": {
             "suggested_key": {
-              "default": "Ctrl+Shift+1",
-              "mac": "Command+Shift+1"
+                "default": "Ctrl+Shift+1",
+                "mac": "Command+Shift+1"
             },
             "description": "Воспроизвести/Остановить аудиозапись"
-          },
+        },
 
-          "next-track": {
+        "next-track": {
             "suggested_key": {
-              "default": "Ctrl+Shift+3",
-              "mac": "Command+Shift+3"
+                "default": "Ctrl+Shift+3",
+                "mac": "Command+Shift+3"
             },
             "description": "Следующая аудиозапись"
-          },
+        },
 
-          "prev-track": {
+        "prev-track": {
             "suggested_key": {
-              "default": "Ctrl+Shift+2",
-              "mac": "Command+Shift+2"
+                "default": "Ctrl+Shift+2",
+                "mac": "Command+Shift+2"
             },
             "description": "Предыдущая аудиозапись"
-          } 
+        }
 
-        },
+    },
 
     "web_accessible_resources": [
 
 
-                "js/includes/preloader.js",
-        "js/includes/loader.js", 
+        "js/includes/preloader.js",
+        "js/includes/loader.js",
 
         "js/engine/constants.js",
 
-        "js/engine/core/global.js",
+        "js/engine/core/helpers.js",
         "js/engine/core/cache.js",
         "js/engine/core/core.js",
-        "js/engine/core/events.js", 
- 
+        "js/engine/core/events.js",
+
         "js/engine/core/dom.js",
         "js/engine/core/storage.js",
+
 
         "js/engine/api/chrome.js",
 
         "js/lib/md5.js",
 
- 
 
         "js/includes/utils.js",
         "js/includes/customEvents.js",
 
+
+        "js/engine/core/plugin/pluginManage.js",
+        "js/engine/core/plugin/plugin.js",
+
         "js/engine/options.js",
 
         "js/includes/ui/contextMenu.js",
+        "js/includes/ui/sidebar.js",
+        "js/includes/ui/pager.js",
+
+        "js/includes/plugin/profiles/antilove.js",
 
         "js/includes/plugin/lastfm/api.js",
+        "js/includes/plugin/vkapi/api.js",
+        "js/includes/plugin/instagram/api.js",
+
         "js/includes/plugin/lastfm/scrobbler.js",
 
         "js/includes/plugin/im/common.js",
 
 
-        "js/includes/plugin/vkapi/vkapi.js",
         "js/includes/plugin/vkapi/search.js",
 
         "js/includes/plugin/groups/leave.js",
 
+        "js/includes/plugin/audio/process.js",
+        "js/includes/plugin/audio/sort.js",
         "js/includes/plugin/audio/download.js",
 
-        "js/includes/plugin/audio/bitrate.js", 
-        "js/includes/plugin/audio/searchAndPlay.js", 
+        "js/includes/plugin/audio/bitrate.js",
+        "js/includes/plugin/audio/searchAndPlay.js",
 
         "js/includes/plugin/audio/shortcut.js",
 
 
-        "js/includes/plugin/sidebar/sidebar.js",
-
+        "js/includes/plugin/audio/finder.js",
 
         "js/includes/plugin/sidebar/friends.js",
-        "js/includes/plugin/sidebar/lastfm.js", 
+        /*
+                "js/includes/plugin/sidebar/lastfm.js",*/
 
-        "js/includes/plugin/audio/queque.js",
+        "js/includes/plugin/sidebar/lastfm.new.js",
 
+        "js/includes/plugin/contextMenu/queque.js",
 
-        "js/includes/plugin/im/stats.js",
-
- 
 
         "js/includes/common.js",
 
@@ -167,13 +177,7 @@
 
         "options/index.html",
 
-        "img/darr.gif",
-        "img/loader.gif",
-        "img/progress.gif",
-        "img/album.png",
-        "img/misc.png",
-        "img/sprite.png",
-        "img/playBtn.png",
-        "img/remove.gif"
+        "img/*.gif",
+        "img/*"
     ]
 }
